<resources>
    <string name="app_name">MovieBookingApp</string>
    <string name="contact_image" />
    <string name="starring">Starring:</string>
    <string name="running_time">Running Time:</string>
    <string name="_0_seats_remaining">0 Seats Remaining</string>
    <string name="title">Title</string>
    <string name="certification">Certification</string>
    <string name="filling_fast">Filling Fast</string>
    <string name="time">Time</string>
    <string name="Starring">Starring</string>
    <string name="credits_myvue">Credits: MyVue</string>
    <string name="description">Description</string>
    <string name="selected_seats">Selected Seats</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="home">HOME</string>
    <string name="a" />
    <string name="seats_remaining">seats remaining</string>
</resources>